# agentic-app

./: .gitignore  CLAUDE.md  DESIGN_DECISIONS.md  DEVELOPMENT.md  README.md  package-lock.json  package.json
docs/: PRD-Appendix-A-Architecture-and-Interfaces-v0_91.md  PRD-Appendix-A-Architecture-and-Interfaces.md  PRD-Appendix-B-Tool-Layer-v0_91.md  PRD-Appendix-B-Tool-Layer.md  PRD-Windows-Agentic-Desktop-App-v0_91.md  PRD-Windows-Agentic-Desktop-App.md  initial_models_json.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: AgentEditor.jsx  ChatView.jsx  SettingsModal.jsx
frontend/src/lib/: tauri.js  tools.js
sidecar/: .gitignore  README.md  pyproject.toml
sidecar/packaging/: sidecar_entry.py
sidecar/src/agent_backend/: __init__.py  __main__.py  config.py  db.py  errors.py  keys.py  llm.py  logging_setup.py  models_catalog.py  server.py  tool_names.py  turn_loop.py
sidecar/src/agent_backend/data/: models.json
sidecar/src/agent_backend/tools/: __init__.py  base.py  calculator.py  datetime_tool.py  files.py  registry.py  web_search.py
sidecar/tests/: conftest.py  test_agents.py  test_chat.py  test_errors.py  test_openrouter_live.py  test_tools.py
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
