[project]
name = "agent-backend"
version = "0.1.0"
description = "Python Flask sidecar for the Windows Agentic Desktop App"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "pydantic>=2.6",
    "requests>=2.31",
]

[project.scripts]
agent-backend = "agent_backend.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
# Live tests hit the real OpenRouter API (network + key + cost + free-tier
# rate limits) so they're excluded from the default run. Include them with:
#   uv run pytest -m live
markers = [
    "live: exercises the real OpenRouter API; excluded by default",
]
addopts = "-m 'not live'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_backend"]

[tool.hatch.build.targets.wheel.force-include]
"src/agent_backend/data" = "agent_backend/data"
